update code 10.18